--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,38 @@
-    ul {
-        margin-top: 20px;
-        font-family: sans-serif;
-    }
+body{ 
+    background-color: red;
+    margin:0px;
+    padding:0px;
+}
+#workflow {
+    background-color: aliceblue;
     
-    li {
-        display: inline;
-        box
-    }
     
-    li a {
-        display: inline-block;
-        padding: 8px;
-        background: #0018A8;
-        text-decoration: none;
-        color: white;
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
-    }
-    
-    li a:hover,
-    li a.active {
-        background: #a6a8D8;
-    }
+}
+
+ul {
+    font-family: sans-serif;
+    position:relative;
+    left:-40px;
+}
+
+li {
+    display: inline;
+}
+
+li a {
+    display: inline-block;
+    padding: 10px;
+    margin-right: 0px;
+    background: #0018A8;
+    text-decoration: none;
+    color: white;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+li a:hover,
+li a.active {
+    background: #a6a8D8;
+}
