--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,9 @@
 body{ 
-    background-color: red;
     margin:0px;
     padding:0px;
 }
 #workflow {
-    background-color: aliceblue;
+    background-color: cyan;
     
     
 }
